deployment/step-4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /employee/$2
spec:
  rules:
    - host: sansoft.io
      http:
        paths:
          - path: /employee(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service-1
                port:
                  number: 80
